[project]
name = "stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.50",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.3.3",
]
